Fix scrollToTop button visible on the first load

--- a/voyage-project-tier1-recipe/styles.css
+++ b/voyage-project-tier1-recipe/styles.css
@@ -335,6 +335,7 @@ button:not(.input-icons):focus {
   position: fixed;
   bottom: 2rem;
   right: 2rem;
+  display: none;
 }
 
 #scrollToTop img {
